Enhance documentation and file structure for KCOW project. Added comprehensive architecture, development guide, domain models, and UX design specifications. Updated .gitignore to include nested XML files in legacy documentation. Included legacy data schemas and images for better reference.

--- a/.gitignore
+++ b/.gitignore
@@ -332,7 +332,7 @@ appsettings.*.Local.json
 #*.xml
 
 # Legacy XML files (sensitive/example data)
-docs/legacy/*.xml
+docs/legacy/**/*.xml
 
 # =========================
 # Build Artifacts
