feat: Implement JWT Authentication and fix code review findings for Story 1.2
Implemented core authentication features including JWT services, User/Role entities, AuthController, and BCrypt password hashing. Addressed code review findings by adding PasswordHasher, fixing test assertions, and resolving Serilog issues in tests.

--- a/apps/backend/src/Api/appsettings.json
+++ b/apps/backend/src/Api/appsettings.json
@@ -2,6 +2,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=kcow.db"
   },
+  "Jwt": {
+    "Key": "kcow-secret-key-minimum-32-characters-long-for-security",
+    "Issuer": "kcow-api",
+    "Audience": "kcow-frontend",
+    "ExpirationMinutes": 60
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
@@ -13,5 +19,6 @@
       }
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "_comment": "NOTE: JWT Key above is for DEVELOPMENT ONLY. Use environment variables or user secrets in production."
 }
