--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -45,7 +45,7 @@ development_status:
   # ========================
   epic-1: in-progress
   1-1-backend-project-scaffold: done
-  1-2-jwt-authentication-integration: ready-for-dev
+  1-2-jwt-authentication-integration: review
   1-3-frontend-auth-service-login-page: ready-for-dev
   1-4-admin-layout-shell-dashboard: ready-for-dev
   1-5-theme-system-accessibility-baseline: ready-for-dev
