refactor: Update kill-processes script and enhance frontend login component
- Refactored the kill-processes.ps1 script to improve process termination logic for frontend and backend development processes, specifically targeting Kcow.Api and Node.js on port 4200.
- Updated package.json to ensure the kill script runs before starting the application.
- Enhanced the login component with DaisyUI for improved styling and accessibility, including error handling and form validation.
- Applied code review fixes to the AuthService and its tests, ensuring proper session management and error handling.
- Updated the status of Story 1.3 to 'done' in implementation artifacts, reflecting completion of all associated tasks.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "KCOW - Full-stack application with .NET backend and Angular frontend",
   "private": true,
   "scripts": {
-    "start": "concurrently -k -n \"frontend,backend\" -c \"magenta,cyan\" \"npm run start:frontend\" \"npm run start:backend\"",
+    "start": "npm run kill && concurrently -n \"frontend,backend\" -c \"magenta,cyan\" \"npm run start:frontend\" \"npm run start:backend\"",
     "start:backend": "cd apps/backend/src/Api && dotnet run",
     "start:frontend": "cd apps/frontend && npm run dev",
     "start:frontend:wait": "wait-on http://localhost:5039/api/health && npm run start:frontend",
