--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -46,7 +46,7 @@ development_status:
   epic-1: in-progress
   1-1-backend-project-scaffold: done
   1-2-jwt-authentication-integration: done
-  1-3-frontend-auth-service-login-page: review
+  1-3-frontend-auth-service-login-page: done
   1-4-admin-layout-shell-dashboard: ready-for-dev
   1-5-theme-system-accessibility-baseline: ready-for-dev
   epic-1-retrospective: optional
