--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -47,7 +47,7 @@ development_status:
   1-1-backend-project-scaffold: done
   1-2-jwt-authentication-integration: done
   1-3-frontend-auth-service-login-page: done
-  1-4-admin-layout-shell-dashboard: ready-for-dev
+  1-4-admin-layout-shell-dashboard: review
   1-5-theme-system-accessibility-baseline: ready-for-dev
   epic-1-retrospective: optional
 
