feat: Finalize theme system and accessibility enhancements
- Updated status of Story 1.5 to 'review' and completed all associated tasks.
- Configured DaisyUI dark theme as the default and removed the theme switcher script.
- Implemented global focus ring styles for improved keyboard navigation accessibility.
- Enhanced form components with ARIA attributes for better screen reader support.
- Created reusable FormFieldComponent and InputComponent with built-in accessibility features.
- Documented accessibility patterns in a new markdown file for future reference.
- Removed Playwright E2E tests and related configurations as part of the cleanup process.
- Ensured all components are tested and meet accessibility standards, addressing previous code review feedback.

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -48,7 +48,7 @@ development_status:
   1-2-jwt-authentication-integration: done
   1-3-frontend-auth-service-login-page: done
   1-4-admin-layout-shell-dashboard: review
-  1-5-theme-system-accessibility-baseline: ready-for-dev
+  1-5-theme-system-accessibility-baseline: review
   epic-1-retrospective: optional
 
   # ========================
