feat: Finalize Story 1.5 with accessibility enhancements and theme updates
- Updated status of Story 1.5 to 'done' after completing all tasks.
- Set the default theme to 'dark' in ThemeService for improved user experience.
- Added comprehensive accessibility tests for Sidebar, Navbar, Dashboard, and FormField components to ensure compliance with standards.
- Enhanced keyboard navigation support across components, ensuring all interactive elements are accessible.
- Removed outdated test failures file as part of cleanup.
- Documented code review fixes and improvements in accessibility patterns for future reference.

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -47,8 +47,8 @@ development_status:
   1-1-backend-project-scaffold: done
   1-2-jwt-authentication-integration: done
   1-3-frontend-auth-service-login-page: done
-  1-4-admin-layout-shell-dashboard: review
-  1-5-theme-system-accessibility-baseline: review
+  1-4-admin-layout-shell-dashboard: done
+  1-5-theme-system-accessibility-baseline: done
   epic-1-retrospective: optional
 
   # ========================
