Finalize Story 2.1: Truck Entity API Endpoints and update status to 'done'
- Completed all tasks related to the Truck entity and its API endpoints.
- Enhanced error handling in TrucksController to return consistent ProblemDetails responses.
- Updated integration tests to ensure all tests are passing.
- Documented implementation details and completion notes in markdown.
- Updated sprint status to reflect completion of Story 2.1 and progress on Story 2.2.

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -55,8 +55,8 @@ development_status:
   # Epic 2: Trucks & Schools Management
   # ========================
   epic-2: backlog
-  2-1-truck-entity-api-endpoints: review
-  2-2-trucks-management-ui: ready-for-dev
+  2-1-truck-entity-api-endpoints: done
+  2-2-trucks-management-ui: in-progress
   2-3-school-entity-api-endpoints: ready-for-dev
   2-4-schools-management-ui: ready-for-dev
   2-5-school-billing-settings: ready-for-dev
