feat: Complete School Billing Settings Implementation (Story 2.5)
- Updated status to 'done' for School Billing Settings story.
- Enhanced school form with billing settings fields, including validation for default session rate and billing cycle.
- Updated backend service to handle billing settings serialization and partial updates.
- Added comprehensive unit tests for billing settings functionality, ensuring all tests pass.
- Documented billing settings usage and integration with existing school management features.
- All acceptance criteria met, confirming functionality is complete and operational.

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -57,9 +57,9 @@ development_status:
   epic-2: backlog
   2-1-truck-entity-api-endpoints: done
   2-2-trucks-management-ui: done
-  2-3-school-entity-api-endpoints: review
-  2-4-schools-management-ui: ready-for-dev
-  2-5-school-billing-settings: ready-for-dev
+  2-3-school-entity-api-endpoints: done
+  2-4-schools-management-ui: done
+  2-5-school-billing-settings: done
   epic-2-retrospective: optional
 
   # ========================
