--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -1,4 +1,4 @@
-# generated: 2026-01-03T19:25:00+02:00
+# generated: 2026-01-06T08:57:41+02:00
 # project: kcow-online
 # project_key: kcow-online
 # tracking_system: file-system
@@ -33,7 +33,7 @@
 # - SM typically creates next story after previous one is 'done' to incorporate learnings
 # - Dev moves story to 'review', then runs code-review (fresh context, different LLM recommended)
 
-generated: 2026-01-03T19:25:00+02:00
+generated: 2026-01-06T08:57:41+02:00
 project: kcow-online
 project_key: kcow-online
 tracking_system: file-system
@@ -60,6 +60,8 @@ development_status:
   2-3-school-entity-api-endpoints: done
   2-4-schools-management-ui: done
   2-5-school-billing-settings: done
+  2-6-data-migration-trucks-schools: ready-for-dev
+  2-7-e2e-tests-trucks-schools-crud: ready-for-dev
   epic-2-retrospective: optional
 
   # ========================
@@ -71,6 +73,8 @@ development_status:
   3-3-schedule-time-slot-configuration: ready-for-dev
   3-4-scheduling-conflict-detection: ready-for-dev
   3-5-weekly-schedule-overview: ready-for-dev
+  3-6-data-migration-class-groups-schedules: ready-for-dev
+  3-7-e2e-tests-class-groups-scheduling-conflicts: ready-for-dev
   epic-3-retrospective: optional
 
   # ========================
@@ -85,6 +89,8 @@ development_status:
   4-6-single-screen-student-profile-layout: ready-for-dev
   4-7-student-profile-child-info-tab: ready-for-dev
   4-8-family-management-in-student-profile: ready-for-dev
+  4-9-data-migration-students-families: ready-for-dev
+  4-10-e2e-tests-student-management-global-search: ready-for-dev
   epic-4-retrospective: optional
 
   # ========================
@@ -97,6 +103,8 @@ development_status:
   5-4-evaluation-entity-api-endpoints: ready-for-dev
   5-5-evaluation-tab-in-student-profile: ready-for-dev
   5-6-bulk-attendance-entry: ready-for-dev
+  5-7-data-migration-attendance-evaluations: ready-for-dev
+  5-8-e2e-tests-attendance-tracking-audit-trail: ready-for-dev
   epic-5-retrospective: optional
 
   # ========================
@@ -109,6 +117,8 @@ development_status:
   6-4-create-invoice: ready-for-dev
   6-5-billing-audit-trail: ready-for-dev
   6-6-billing-status-in-profile-header: ready-for-dev
+  6-7-data-migration-billing-financials: ready-for-dev
+  6-8-e2e-tests-billing-management-financial-accuracy: ready-for-dev
   epic-6-retrospective: optional
 
   # ========================
@@ -122,3 +132,4 @@ development_status:
   7-5-import-audit-log: ready-for-dev
   7-6-import-re-run-capability: ready-for-dev
   epic-7-retrospective: optional
+
