Update Story 2.6 status to review and complete E2E tests for Schools Management UI
- Changed the status of Story 2.6: Data Migration - Trucks & Schools to 'review'.
- Marked all tasks as complete, including verification of UI and API availability.
- Created comprehensive E2E tests for the Schools Management UI to validate imported data rendering, navigation, and search/filter functionalities.
- Added new test file `schools.spec.ts` for detailed E2E testing of the schools page.

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -60,7 +60,7 @@ development_status:
   2-3-school-entity-api-endpoints: done
   2-4-schools-management-ui: done
   2-5-school-billing-settings: done
-  2-6-data-migration-trucks-schools: ready-for-dev
+  2-6-data-migration-trucks-schools: review
   2-7-e2e-tests-trucks-schools-crud: ready-for-dev
   epic-2-retrospective: optional
 
