Finalize Story 2.7: E2E Tests for Trucks & Schools CRUD
- Updated the status of Story 2.7 to 'done' after addressing code review findings and implementing necessary refactors.
- Refactored E2E tests to utilize the Page Object Model for improved maintainability and reliability.
- Enhanced test assertions by removing conditional logic and hard waits, ensuring strict expectations for element visibility.
- Documented changes and validated test isolation to ensure comprehensive coverage of CRUD operations.

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -61,7 +61,7 @@ development_status:
   2-4-schools-management-ui: done
   2-5-school-billing-settings: done
   2-6-data-migration-trucks-schools: done
-  2-7-e2e-tests-trucks-schools-crud: review
+  2-7-e2e-tests-trucks-schools-crud: done
   epic-2-retrospective: optional
 
   # ========================
