--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -81,16 +81,16 @@ development_status:
   # Epic 4: Student & Family Management
   # ========================
   epic-4: in-progress
-  4-1-student-entity-api-endpoints: review
-  4-2-family-entity-api-endpoints: review
-  4-3-student-assignment-to-school-class-group: ready-for-dev
-  4-4-global-student-search: ready-for-dev
-  4-5-students-list-page: ready-for-dev
-  4-6-single-screen-student-profile-layout: ready-for-dev
-  4-7-student-profile-child-info-tab: ready-for-dev
-  4-8-family-management-in-student-profile: ready-for-dev
-  4-9-data-migration-students-families: ready-for-dev
-  4-10-e2e-tests-student-management-global-search: ready-for-dev
+  4-1-student-entity-api-endpoints: done  # Code reviewed: All critical security & performance issues fixed
+  4-2-family-entity-api-endpoints: done  # Code reviewed: N+1 query resolved, production ready
+  4-3-student-assignment-to-school-class-group: done  # Code reviewed: Frontend implementation complete, all ACs met
+  4-4-global-student-search: review
+  4-5-students-list-page: review
+  4-6-single-screen-student-profile-layout: review
+  4-7-student-profile-child-info-tab: review
+  4-8-family-management-in-student-profile: review
+  4-9-data-migration-students-families: review
+  4-10-e2e-tests-student-management-global-search: review
   epic-4-retrospective: optional
 
   # ========================
