feat: Introduce Epic 8: Activity Management with associated API and UI features
- Added Epic 8 to the project, focusing on managing educational activities.
- Implemented Activity entity and API endpoints for CRUD operations.
- Developed a management UI for activities, including data entry and display functionalities.
- Included legacy data migration for activities from XML, ensuring existing programs are integrated.
- Created E2E tests to validate activity management workflows and data integrity.

These enhancements expand the application's capabilities in managing educational programs and improve user experience through a dedicated interface.

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -133,3 +133,13 @@ development_status:
   7-6-import-re-run-capability: ready-for-dev
   epic-7-retrospective: optional
 
+  # ========================
+  # Epic 8: Activity Management
+  # ========================
+  epic-8: backlog
+  8-1-activity-entity-api-endpoints: ready-for-dev  # Includes Icon field (base64 string from OLE Object)
+  8-2-activities-management-ui: ready-for-dev
+  8-3-data-migration-activities: ready-for-dev  # Import from 11.8MB Activity.xml with embedded images
+  8-4-e2e-tests-activities-crud: ready-for-dev
+  epic-8-retrospective: optional
+
