feat: Complete implementation of Activity Management API and related features
- Marked Story 8.1 as done, finalizing the Activity entity and its API endpoints for full CRUD operations.
- Updated Activity entity to use English field names and added fields for soft-delete and audit support.
- Created and registered the ActivitiesController, implementing authentication and error handling.
- Developed ActivityService for business logic, including duplicate checking and soft-delete functionality.
- Added comprehensive integration tests for all API endpoints, ensuring robust validation of functionality.

These enhancements significantly improve the management of educational activities, providing a seamless user experience and ensuring data integrity.

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -136,8 +136,8 @@ development_status:
   # ========================
   # Epic 8: Activity Management
   # ========================
-  epic-8: backlog
-  8-1-activity-entity-api-endpoints: ready-for-dev  # Includes Icon field (base64 string from OLE Object)
+  epic-8: in-progress
+  8-1-activity-entity-api-endpoints: done  # Code reviewed: All critical issues fixed, integration tests added
   8-2-activities-management-ui: ready-for-dev
   8-3-data-migration-activities: ready-for-dev  # Import from 11.8MB Activity.xml with embedded images
   8-4-e2e-tests-activities-crud: ready-for-dev
