chore: Mark Epic 8 as done (all stories completed)
Epic 8 - Activity Management: All 4 stories now complete
- 8-1: Activity Entity & API Endpoints
- 8-2: Activities Management UI
- 8-3: Data Migration - Activities
- 8-4: E2E Tests - Activities CRUD

All stories have passed code review and are production-ready.

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -136,7 +136,7 @@ development_status:
   # ========================
   # Epic 8: Activity Management
   # ========================
-  epic-8: in-progress
+  epic-8: done
   8-1-activity-entity-api-endpoints: done  # Code reviewed: All critical issues fixed, integration tests added
   8-2-activities-management-ui: done  # Code reviewed: Icon upload restricted to PNG/2MB, delete behavior fixed
   8-3-data-migration-activities: done  # Code reviewed: Preview mode DB commit bug fixed, OLE header warning added
