--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -1,4 +1,4 @@
-# generated: 2026-01-06T08:57:41+02:00
+# generated: 2026-01-13
 # project: kcow-online
 # project_key: kcow-online
 # tracking_system: file-system
@@ -33,13 +33,20 @@
 # - SM typically creates next story after previous one is 'done' to incorporate learnings
 # - Dev moves story to 'review', then runs code-review (fresh context, different LLM recommended)
 
-generated: 2026-01-06T08:57:41+02:00
+generated: 2026-01-13
 project: kcow-online
 project_key: kcow-online
 tracking_system: file-system
 story_location: "{project-root}/_bmad-output/implementation-artifacts"
 
 development_status:
+  # ========================
+  # Epic 0: Infrastructure & Architectural Foundation
+  # ========================
+  epic-0: in-progress
+  0-1-migrate-ef-core-to-dapper-dbup: in-progress
+  epic-0-retrospective: optional
+
   # ========================
   # Epic 1: Project Foundation & Authentication
   # ========================
@@ -49,6 +56,7 @@ development_status:
   1-3-frontend-auth-service-login-page: done
   1-4-admin-layout-shell-dashboard: done
   1-5-theme-system-accessibility-baseline: done
+  1-6-e2e-tests-authentication-flows: done
   epic-1-retrospective: optional
 
   # ========================
@@ -131,6 +139,7 @@ development_status:
   7-4-import-execution-with-exception-handling: ready-for-dev
   7-5-import-audit-log: ready-for-dev
   7-6-import-re-run-capability: ready-for-dev
+  7-7-integration-tests-legacy-data-import-pipeline: ready-for-dev
   epic-7-retrospective: optional
 
   # ========================
