refactor: Update SchoolsController to use ISchoolRepository and remove AppDbContext
- Replaced AppDbContext with ISchoolRepository in SchoolsController for improved data access.
- Updated methods to retrieve archived schools using the new repository pattern.
- Adjusted constructor and dependency injection to reflect changes in the data access layer.
- Modified AuthSeeder to change admin email for consistency in local development.

--- a/apps/backend/src/Infrastructure/Kcow.Infrastructure.csproj
+++ b/apps/backend/src/Infrastructure/Kcow.Infrastructure.csproj
@@ -8,12 +8,19 @@
   <ItemGroup>
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="Dapper" Version="2.1.35" />
-    <PackageReference Include="DbUp" Version="5.0.0" />
-    <PackageReference Include="dbup-sqlite" Version="5.0.0" />
+    <PackageReference Include="DbUp" Version="5.0.8" />
+    <PackageReference Include="dbup-sqlite" Version="5.0.8" />
     <PackageReference Include="Microsoft.Data.Sqlite" Version="9.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="10.0.2" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.2" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.3.0" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <!-- Override transitive dependencies with secure versions -->
+    <PackageReference Include="Azure.Identity" Version="1.13.1" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.2" />
+    <PackageReference Include="System.Drawing.Common" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
