--- a/apps/backend/tools/LegacyImportRunner/LegacyImportRunner.csproj
+++ b/apps/backend/tools/LegacyImportRunner/LegacyImportRunner.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="..\..\src\Infrastructure\Kcow.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="10.0.2" />
+  </ItemGroup>
+
 </Project>
