chore: Add project context path to configuration
- Introduced a new configuration entry 'project_context' in config.yaml to specify the path for project context documentation.

--- a/_bmad/bmm/config.yaml
+++ b/_bmad/bmm/config.yaml
@@ -14,3 +14,4 @@ user_name: Joe
 communication_language: English
 document_output_language: English
 output_folder: "{project-root}/_bmad-output"
+project_context: "{project-root}/docs/project_context.md"
