--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -104,8 +104,8 @@ development_status:
   # ========================
   # Epic 5: Attendance & Evaluations
   # ========================
-  epic-5: backlog
-  5-1-attendance-entity-api-endpoints: ready-for-dev
+  epic-5: in-progress
+  5-1-attendance-entity-api-endpoints: in-progress
   5-2-attendance-tab-in-student-profile: ready-for-dev
   5-3-attendance-audit-trail: ready-for-dev
   5-4-evaluation-entity-api-endpoints: ready-for-dev
